[tool.poetry]
name = "banking-app"
version = "0.1.0"
description = ""
authors = ["Aleksandra Volchikhina <aleksandravolcihina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[tool.black]
# Максимальная длина строки
line-length = 79
# Файлы, которые не нужно форматировать
exclude = '''(/(\.git))'''

[tool.isort]
# Максимальная длина строки
line-length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
